[package]
name = "fuse-gui"
version = "0.1.0"
authors = ["Lance Wallis <bleudeveloper@gmail.com>"]
edition = "2021"

[lib]
path = "fuse-gui.rs"

[dependencies]
egui = "0.19.0"
eframe = { version = "0.19.0", features = ["persistence"] } 
serde = { verseion = "1", features = ["derive"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"


[profile.release]
opt-level = 2 # fast and small wasm


