[package]
name = "fuse-gui"
version = "0.1.0"
authors = ["Lance Wallis <bleudeveloper@gmail.com>"]
edition = "2021"

[lib]
path = "fuse-gui.rs"

[dependencies]
fuse-util = { path = "../fuse-util/" }
futures-util = "0.3.26"
reqwest = { version = "0.11.14", features = ["stream"] }
egui = "0.21.0"
eframe = { version = "0.21.3", features = ["persistence"] } 
flume = "0.10.14"
futures = "0.3.26"
serde = { verseion = "1", features = ["derive"] }
crossbeam-channel = "0.5"
native-dialog = "0.6"
thiserror = "1"


# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"


[profile.release]
opt-level = 2 # fast and small wasm


